# Projeto-IC-XPE-2026

./: README.md  main.py  main2.py  objetivos_aprendizagem.txt  objetivos_aprendizagem_aprendendo_machine_learning.txt  objetivos_aprendizagem_aprendizado_por_reforco.txt  projetos_pbl.txt  pyproject.toml  rank_obj_projects.py
data/processed/: LO_PBL_aprendendo_sql.csv  LO_PBL_aprendizado_por_reforco.csv  LO_to_PBLs.json  PBL_LO_aprendizado_por_reforco.csv  PBL_LO_programacao_python.csv  checkpoint_mapeamento.json  mapeamento_pbl_objetivos_aprendizado_por_reforco.json  mapeamento_pbl_objetivos_programacao_python.json  matriz_LO_x_PBL.csv  matriz_PBL_x_PBL.csv  (+10 more)
data/processed(antigo)/: LO_PBL_programacao_python.csv  LO_to_PBLs.json  antigoprojetos_pbl_programacao_python.json  mapeamento_pbl_objetivos_programacao_python.json  matriz_LO_x_PBL.csv  matriz_PBL_x_PBL.csv
jupyter/: rank_PBLs.ipynb
pythontesting/: LO_PBL_combined_analysis.csv  LO_PBL_side_by_side.csv  LO_vs_PBLs.csv  PBLs_vs_LO.csv  lo_to_pbl_coverage.py  main3.py  pbl_to_lo_coverage.py
ranks (antigo)/: rank_obj_projects.py  rank_pbl_objectives.py
rascunho/: LO_PBL_aprendizado_por_reforco1.csv
rascunho-aprendizado-reforco/: PBL_LO_aprendizado_por_reforco1.csv
rascunho-aprendizado-reforco-atual/: LO_vs_PBLs.csv  PBL_LO_aprendizado_por_reforco.csv  PBLs_vs_LO.csv  projetos_pbl_aprendizado_por_reforco.json
src/: generateMatriz.py  generatePBL.py  generateobjectives.py  mapeamentoPBLxObjetivos.py  pbl_dependency_graph.py  rank_obj_projects.py  rank_pbl_objectives.py  test.py
(+10 files in other folders)
